# gpt-from-first-principles

./: .gitignore  README.md  pyproject.toml
data/: README.md
experiments/: README.md
experiments/chapter-3/: attention.py
notebooks/: README.md
notebooks/01-text-foundations/: 01-tokenization.ipynb  02-training-windows.ipynb  03-token-and-position-embeddings.ipynb
notebooks/02-attention/: 01-attention-by-hand.ipynb  02-trainable-self-attention.ipynb  03-causal-attention.ipynb  04-multi-head-attention.ipynb
