[project]
name = "gpt-from-first-principles"
version = "0.1.0"
description = "A small GPT built from first principles in executable notebooks."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jupyterlab>=4.4",
    "matplotlib>=3.10",
    "tiktoken>=0.9",
    "torch>=2.7",
]

[tool.uv]
package = false
